--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <head>
         HELLO
+        <style>
+            body {
+                color: blue;
+            }
+        </style>
     </head>
     <body>
         <h1>Welcome to my website!</h1>
