--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        HELLO
+        <title>HELLO</title>
         <style>
             body {
                 color: blue;
