Feeling Lucky Button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="buttons">
                     <input type="submit" value="Google Search" class="button">
-                    <input type="submit" value="I'm Feeling Lucky" name="btn1">
+                    <input type="submit" value="I'm Feeling Lucky" name="btnI">
                 </div>
             </form>
             </div>
