Image.html works

--- a/image.html
+++ b/image.html
@@ -8,9 +8,16 @@
         <div class="header">
             <a href=index.html>Search</a>
         </div>
-        <form action="https://google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
-        </form>
+        <div class="center">
+            <img src="WhiteGoogleLogo.png" alt="Plain white Google logo">
+            <div class="search">
+            <form action="https://www.google.com/search">
+                <div class="search_bar">
+                    <input type="text" name="q">
+                    <input type="hidden" name="tbm" value="isch">
+                </div>
+            </form>
+            </div>
+        </div>
     </body>
 </html>
