--- a/advanced.html
+++ b/advanced.html
@@ -5,9 +5,18 @@
         <link rel="stylesheet" href="google.css">
     </head>
     <body>
+        <div class="header">
+            <a href="search.html">Search</a>
+        </div>
+        <div class="appbar">
+            <label style="margin-left:10px">Advanced Search</label>
+        </div>
         <form action="https://google.com/search">
-            <input type="text" name="q">
-            <input type="submit" value="Google Search">
+            <input type="text" name="as_q">
+            <input type="text" name="as_epq">
+            <input type="text" name="as_oq">
+            <input type="text" name="as_eq">
+            <input type="submit" value="Advanced Search">
         </form>
     </body>
 </html>
