--- a/advanced.html
+++ b/advanced.html
@@ -9,8 +9,11 @@
             <a href="search.html">Search</a>
         </div>
         <div class="appbar">
-            <label style="margin-left:10px">Advanced Search</label>
+            <label>Advanced Search</label>
         </div>
+        <div class="line"></div>
+        <div class="advanced_search">
+            <span>Find pages with...</span>
         <form action="https://google.com/search">
             <input type="text" name="as_q">
             <input type="text" name="as_epq">
@@ -18,5 +21,6 @@
             <input type="text" name="as_eq">
             <input type="submit" value="Advanced Search">
         </form>
+        </div>
     </body>
 </html>
