Fixed Advanced Search Button

--- a/advanced.html
+++ b/advanced.html
@@ -33,8 +33,10 @@
                         <span>none of these words: </span>
                 </div>
                 <input type="text" name="as_eq">
-                <input type="submit" value="Advanced Search">
-            </form>
+                <div class="advanced_button">
+                    <input style = "width: 120px;" type="submit" value="Advanced Search">
+                </div>
+                </form>
         </div>
     </body>
 </html>
